<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center">

    <TextView
        android:id="@+id/tvName"
        style="@style/TextViewApp.SubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nhap_sdt_cua_ban"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edtNumber"
        style="@style/EditTextApp.Border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_marginStart="@dimen/base50"
        android:layout_marginEnd="@dimen/base50"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:gravity="center"
        android:hint="@string/nhap_sdt"
        android:inputType="number" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/ButtonApp.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNumber"
        android:layout_marginStart="@dimen/base50"
        android:layout_marginEnd="@dimen/base50"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/tiep_tuc"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/tvContacts"
        style="@style/TextViewApp.SubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfirm"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/chon_tu_danh_ba"
        android:textColor="@color/white" />

</RelativeLayout>