<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewApp.SubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/menh_gia"
            android:textColor="@color/light_text" />

        <TextView
            android:id="@+id/tvMoney"
            style="@style/TextViewApp.SubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/base10"
            android:layout_marginRight="@dimen/base10"
            android:padding="@dimen/padding_normal"
            tools:text="20000d" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewApp.SubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/so_luong"
            android:textColor="@color/light_text" />

        <TextView
            android:id="@+id/tvCount"
            style="@style/TextViewApp.SubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/base10"
            android:layout_marginRight="@dimen/base10"
            android:padding="@dimen/padding_normal"
            tools:text="2" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/base10"
        android:layout_marginLeft="@dimen/base10"
        android:layout_marginEnd="@dimen/base10"
        android:background="@color/dark_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewApp.SubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/tong_tien"
            android:textColor="@color/light_text" />

        <TextView
            android:id="@+id/tvSum"
            style="@style/TextViewApp.SubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/base10"
            android:layout_marginRight="@dimen/base10"
            android:padding="@dimen/padding_normal"
            android:textStyle="bold"
            tools:text="10.000đ" />
    </RelativeLayout>
</LinearLayout>